A bit more changes in README.txt.