@@ -28,7 +28,10 @@ In the below instructions, the root of the code is denoted as CODEBASE.
 3. Build and deploy your ClimateAdapt source code
 ***************************************************
 
-Go into CODEBASE/tools. There you should see the "root-level" pom.xml for Maven.
+Before building with Maven, you need to give it at least the following amount of memory:
+MAVEN_OPTS=-Xmx1024m -XX:MaxPermSize=512m.
+
+Go into CODEBASE root. There you should see the "root-level" pom.xml for Maven.
 Execute the following command:
 
 > mvn package
